cozycast-server/src/main/resources/static/css/styles.css
* {
    box-sizing: border-box;
    scrollbar-color: #346 #235;
}

:root {
    --cozycast-dpr: 1;
    font-family: "Arial", "sans-serif";
}

.legacyDesign{
    --cozycast-noise: none;
    --cozyColor: black;
    --cozyColorMenu: #171b22;
    --cozyColorAccent: #22242f;
    --cozyButton: #252733;
    --cozyButtonAccemt: #0e0f14;
}

.defaultDesign{
    --cozycast-noise: url("/png/noise_128.png");
    --cozyColor: #181828;
    --cozyColorMenu: #123;
    --cozyColorAccent: #235;
    --cozyButton: #17c;
    --cozyButtonAccemt: #048;
}

::-webkit-scrollbar {
    background: #346;
}

::-webkit-scrollbar-thumb {
    background: #235;
}

input:focus,
select:focus,
textarea:focus,
button:focus,
video:focus,
div:focus {
    outline: none;
}

html, body, #pagecontent, #videosizer {
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
}

.hideCursor {
    cursor: none;
}

.hidden {
    display: none;
}

#pagecontent {
    display: flex;
    width: 100%;
}

#pagecontent > *{
    background-size: calc(128px / var(--cozycast-dpr));
}

.noiseBackground > *{
    background: fixed repeat top left var(--cozycast-noise);
}

.contentWithoutSidebar {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    overflow-x: hidden;
    position: relative;
}

#videoBig, #video {
    min-width: 0;
    min-height: 0;
}

#videoBig {
    flex-grow: 1;
    grid-area: video;
    position: relative;
    background-color: var(--cozyColor);
}

#videosizer {
    display: flex;
}

#video {
    flex-grow: 1;
}

#chatbox {
    padding: 10px;
}

#pagetoolbar {
    align-content: flex-end;
}

#controls{
    height: 3em;
    display: flex;
    justify-content: space-between;
    align-self: center;
    overflow: fragments;
}

.controlsFullscreen{
    background-color: transparent;
    background: none;
}

.toolbarFullscreen{
    z-index: 2;
    position: absolute;
    bottom: 0;
    width: 100%;
}

.hideToolbar{
    opacity: 0;
    transition: opacity 2s;
}

.hideToolbar:hover{
    opacity: 1;
    transition: opacity 0s;
}

.subControls{
    display: flex;
    grid-gap: .5em;
    margin: .5em;
    min-width: 0;
}

#userlist {
    flex-grow: 1;
    display: flex;
    justify-content: center;
    min-width: 0;
    gap: 15px;
    overflow: auto hidden;
    scrollbar-width: thin;
    background: var(--cozyColorMenu) var(--cozycast-noise);
}

.visibleControls{
    background: var(--cozyColorMenu) var(--cozycast-noise);
}

.bigUserlist {
    height: 5em;
}

.smallUserlist {
    height: 4.5em;
}

.userlistSidebar {
    overflow: auto hidden;
    display: flex;
    flex-direction: column;
    margin-left: 1em;
    margin-top: 1em;
    gap: 15px;
}

.userSidebar {
    display: grid;
    grid-template-columns: 4em 1fr;
}

.usernameSidebar {
    display: flex;
    margin-left: 1em;
    align-items:center;
}

.btn {
    color: white;
    border-radius: 0.2em;
    transition: background-color 0.2s;
}

button{
    font-size: 100%;
    line-height: 1.0rem;
    height: 100%;
    margin: 0;
    border: none;
}

.buttonBig {
    min-width: 4em;
    width: 8em;
}

.buttonSmall {
    min-width: 2em;
    width: 4em;
}

.btn-primary {
    background-color: var(--cozyButton);
    border-color: var(--cozyButtonAccemt);
}

.btn-primary:hover {
    background-color: var(--cozyButtonAccemt);
}

.btn-danger {
    background-color: #f90;
    border-color: #b60;
}

.btn-danger:hover {
    background-color: #b60;
}

#copyright {
    position: absolute;
    color: lightgray;
    font-size: .5em;
    left: 3px;
    bottom: 3px;
}

.message {
    background-color: rgba(0, 0, 0, 0.3);
    margin-top: 10px;
    padding: .5em;
    border-radius: .2em;
    box-shadow: 0 0 4px black inset;
}

.message > div:not(.username) {
	margin-left: .5em;
	font-size: 0.9em;
}

#videocontrols {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 2;
}

#chat, .chat-link, .chat-link:hover  {
    color: white;
}

.username {
    font-weight: 600;
}

.timestamp {
    font-weight: 300;
    font-size: 0.8em;
    color: lightgray;
}

#messages {
    flex-grow: 1;
    padding-left: 10px;
    padding-right: 10px;
    overflow-y: scroll;
    word-break: break-word;
}

#history-mode {
    margin: auto;
}

.chat-video video {
    height: 100%;
    width: 100%;
}

.chat-image {
    display: block;
    height: auto;
    min-width: 100%;
    width: 100%;
}

.chat-image img {
    display: block;
    height: 100%;
    width: 100%;
}

#chatbox-textarea {
    color: white;
    background: var(--cozyColorAccent) var(--cozycast-noise);
    resize: none;
    width: 100%;
    border-radius: 5px;
    border-color: #124;
    font-size: 15px;
    padding: .3em;
    height: 4em;
}

.image-uploader {
    position: relative;
}

.image-uploader-button-wrapper {
    height: 100%;
    position: absolute;
    bottom: 0px;
    right: 8px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.image-uploader-button {
}

.image-uploader-button:hover {
    background-color: white;
    border-radius: 5px;
}

#image-upload-file {
    display: none;
}

.remote-wrapper {
    margin-left: auto;
    position: relative;
}

.user {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    color: white;
    margin-left: 5px;
    margin-right: 5px;
}

.remote {
    position: absolute;
    bottom: 0px;
    right: 0px;
    background-color: #e4910a;
}

.volumeSlider {
    margin: auto;
    align-self: center;
    -webkit-appearance: none;

    appearance: none;
    width: 100%;
    max-width: 100px;
    height: 5px;
    background: #346;
    outline: none;
    opacity: 0.7;
    -webkit-transition: .2s;
    transition: opacity .2s;
}

.volumeSlider:focus {
    outline: 0;
}
/* ... */

